RESOLVED FIXED110836
[BlackBerry] The virtual keyboard hides part of Signing In dialog
https://bugs.webkit.org/show_bug.cgi?id=110836
Summary [BlackBerry] The virtual keyboard hides part of Signing In dialog
Sean Wang
Reported 2013-02-25 19:12:18 PST
Steps: 1) Launch browser and navigate to gmail.com 2) Enter username and password and click on Submit in Form control Expected: 2) The confirm dialog should not be hidden by virtual Actual: 2) The confirm dialog is covered partially by virtual. We should show the "credentials saving dialog" after form submit event.
Attachments
patch (6.44 KB, patch)
2013-02-25 19:37 PST, Sean Wang
no flags
Sean Wang
Comment 1 2013-02-25 19:37:43 PST
WebKit Review Bot
Comment 2 2013-02-27 09:14:31 PST
Comment on attachment 190183 [details] patch Clearing flags on attachment: 190183 Committed r144200: <http://trac.webkit.org/changeset/144200>
WebKit Review Bot
Comment 3 2013-02-27 09:14:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.